--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>MP-Personal Webpage</title>
+  <title>Mark Piraino</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css"
     integrity="sha384-qF/QmIAj5ZaYFAeQcrQ6bfVMAh4zZlrGwTPY7T/M+iTTLJqJBJjwwnsE5Y0mV7QK" crossorigin="anonymous">
 </head>
@@ -18,10 +18,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="#">Research</a>
+          <a class="nav-link" href="pages/research.html">Research</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="#">CV</a>
+          <a class="nav-link" href="pages/cv.html">CV</a>
         </li>
       </ul>
     </div>
@@ -32,14 +32,15 @@
       <div class="card" style="width: 100%; padding: 2%; border-color:white">
         <div class="card-body">
           <h3 class="card-title">About Me</h3>
-          <img src="picture2.jpg" class="rounded mx-auto d-block" style="width: 80%">
+          <img src="images/picture2.jpg" class="rounded mx-auto d-block" style="width: 80%">
           <p class="card-text" style="padding: 2%">
 			I am currently a RTG postdoctoral fellow in the 
 			<a href="https://www.math.northwestern.edu/">mathematics department</a> at 
-			<a href="https://www.northwestern.edu/">Northwestern University</a>. Previously I obatined my PhD 
+			<a href="https://www.northwestern.edu/">Northwestern University</a>. Previously I obtained my PhD 
 			from the <a href="https://www.uvic.ca/science/math-statistics/">University of Victoria</a> 
 			under the supervision of <a href="http://www.math.uvic.ca/~cbose/">Chris Bose</a> and 
-			<a href="http://www.math.uvic.ca/faculty/aquas/">Anthony Quas</a>. 
+      <a href="http://www.math.uvic.ca/faculty/aquas/">Anthony Quas</a>. My thesis was awarded a 
+      <a href="https://www.gg.ca/en/honours/governor-generals-awards/governor-generals-academic-medal">Govenor General's gold medal</a>.
 			Before that I received a B.S. in chemistry and mathematics and a 
 			M.S. in pure mathematics from <a href="https://www.depaul.edu/Pages/default.aspx">DePaul Universtiy</a>.
           </p>
