--- a/pages/cv.html
+++ b/pages/cv.html
@@ -31,22 +31,97 @@
     <div class="row">
         <div class="col-md-8 order-md-1 order-sm-2 order-2" style="padding: 3%">
             <h3>CV</h3>
-            <div class="card" style="width: 100%; padding: 2%; border-color:white">
-                <div class="card-body">
-                  <h4 class="card-title" id="Positions">Academic Positions</h4>
-                  <ul style="list-style: none;">
-                      <li>
-                          <div class="float-left">
-                              <b>RTG Postdoctoral Fellow</b> 
-                              <p>Northwestern University</p>
+            <div class="row">
+                <div class="col-12">
+                    <div style="border-style: none none solid none;">
+                        <h4 id="Positions">Academic Positions</h4>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="float-left">
+                                <b>RTG Postdoctoral Fellow</b>
+                                <p>Northwestern University</p>
+                            </div>
+                            <div class="float-right">
+                                September 2019-Present
+                            </div>
                         </div>
-                          <div class="float-right">
-                              September 2019 - Present
-                          </div>
-                      </li>
-                  </ul>
+                    </div>
                 </div>
-              </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div style="border-style: none none solid none;">
+                        <h4 id="Education">Education</h4>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="float-left">
+                                <b>PhD in Mathematics</b>
+                                <p>University in Victoria</p>
+                            </div>
+                            <div class="float-right">
+                                August 2019
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="float-left">
+                                <b>MS in Pure Mathematics</b>
+                                <p>DePaul University</p>
+                            </div>
+                            <div class="float-right">
+                                June 2015
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="float-left">
+                                <b>BS in Chemistry and Mathematics</b>
+                                <p>DePaul University</p>
+                            </div>
+                            <div class="float-right">
+                                June 2014
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div style="border-style: none none solid none;">
+                        <h4 id="awards">Certificates</h4>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="float-left">
+                                <b>Data Science and Visualization</b>
+                                <p>Northwestern University School of Professional Studies</p>
+                            </div>
+                            <div class="float-right">
+                                December 2020 (expected)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div style="border-style: none none solid none;">
+                        <h4 id="awards">Awards</h4>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="float-left">
+                                <b>Govenor General's gold medal</b>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
@@ -58,7 +133,17 @@
                         <li>
                             <a href="#Positions">Academic Positions</a>
                         </li>
+                        <li>
+                            <a href="#Education">Education</a>
+                        </li>
+                        <li>
+                            <a href="certificates">Certificates</a>
+                        </li>
+                        <li>
+                            <a href = "awards">Awards</a>
+                        </li>
                     </ul>
+                    <h6><a href="../CV/CV-MarkPiraino-complete.pdf ">Full CV</a></h6>
                 </div>
             </div>
         </div>
