--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a href="http://www.math.uvic.ca/faculty/aquas/">Anthony Quas</a>. My thesis was awarded a 
       <a href="https://www.gg.ca/en/honours/governor-generals-awards/governor-generals-academic-medal">Govenor General's gold medal</a>.
 			Before that I received a B.S. in chemistry and mathematics and a 
-			M.S. in pure mathematics from <a href="https://www.depaul.edu/Pages/default.aspx">DePaul Universtiy</a>.
+			M.S. in pure mathematics from <a href="https://www.depaul.edu/Pages/default.aspx">DePaul University</a>.
           </p>
         </div>
       </div>
