--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item ">
+          <a class="nav-link" href="https://github.com/mpiraino">GitHub Profile</a>
+        </li>
+        <li class="nav-item ">
           <a class="nav-link" href="pages/research.html">Research</a>
         </li>
         <li class="nav-item ">
