--- a/pages/research.html
+++ b/pages/research.html
@@ -19,6 +19,9 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item ">
+                    <a class="nav-link" href="https://github.com/mpiraino">GitHub Profile</a>
+                  </li>
+                <li class="nav-item ">
                     <a class="nav-link" href="research.html">Research</a>
                 </li>
                 <li class="nav-item">
