--- a/pages/cv.html
+++ b/pages/cv.html
@@ -105,7 +105,18 @@
                                 <p>Northwestern University School of Professional Studies</p>
                             </div>
                             <div class="float-right">
-                                December 2020 (expected)
+                                November 2020
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="float-left">
+                                <b><a href = "https://coursera.org/share/f9a0d707acde360e04a6f75aa7adecba">Deep Learning Specialization</a></b>
+                                <p>Coursera: DeepLeraning.ai</p>
+                            </div>
+                            <div class="float-right">
+                                September 2020
                             </div>
                         </div>
                     </div>
