--- a/pages/cv.html
+++ b/pages/cv.html
@@ -61,6 +61,17 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="float-left">
+                                <b>MS in Computer Science</b>
+                                <p>DePaul University</p>
+                            </div>
+                            <div class="float-right">
+                                in progress
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="float-left">
                                 <b>PhD in Mathematics</b>
                                 <p>University in Victoria</p>
                             </div>
@@ -101,7 +112,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="float-left">
-                                <b>Data Science and Visualization</b>
+                                <b><a href = "../certificates/Mark Piraino Professional Development Certificate.pdf">Data Science and Visualization</a></b>
                                 <p>Northwestern University School of Professional Studies</p>
                             </div>
                             <div class="float-right">
@@ -120,6 +131,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="float-left">
+                                <b><a href = "#">Pricing Options with Mathematical Models</a></b>
+                                <p>edX: CalTechX</p>
+                            </div>
+                            <div class="float-right">
+                                Janurary 2021
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -130,7 +152,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="float-left">
-                                <b>Govenor General's gold medal</b>
+                                <b><a href= "https://www.gg.ca/en/honours/governor-generals-awards/governor-generals-academic-medal">Govenor General's gold medal</a></b>
                             </div>
                         </div>
                     </div>
