--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="card-body">
           <h3 class="card-title">About Me</h3>
           <img src="images/picture2.jpg" class="rounded mx-auto d-block" style="width: 80%">
+          <p style="font-size: 5pt;"> A slefie in front a the statue "Self portrait of a Dreamer" by Joseph Klibansky.</p>
           <p class="card-text" style="padding: 2%">
 			I am currently a RTG postdoctoral fellow in the 
 			<a href="https://www.math.northwestern.edu/">mathematics department</a> at 
